--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
                 how to make simple website. My goal is to build 3 websites and learn advanced topics.
             </p>
-            <a class="link-button" target="_blank" href="">Download Resume</a>
+            <a class="link-button" target="_blank" href="https://akiburneowaz.github.io/developer-portpolio/">Download
+                Resume</a>
 
         </div>
     </section>
